# fdk-mqa-scoring-api

./: Cargo.toml  Dockerfile  README.md  openapi.yaml
.github/workflows/: deploy-prod&demo.yaml  deploy-staging.yaml
deploy/base/: deployment-fdk-mqa-scoring-api.yaml
src/: app.rs  auth.rs  config.rs  cors.rs  database.rs  db_models.rs  error.rs  http_utils.rs  main.rs  mqa_dimensions.rs
src/handlers/: assessments.rs  health.rs  mod.rs  scores.rs
src/models/: dataset_score.rs  datasets_request.rs  datasets_scores.rs  dimension.rs  dimension_aggregate.rs  metric.rs  mod.rs  score.rs  score_post_request.rs  success_response.rs
