[package]
name = "fdk-mqa-scoring-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
diesel = { version = "2.3.3", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.3.0", features = ["postgres"] }
http = "1.3.1"
lazy_static = "1.5.0"
mime = "0.3.17"
r2d2 = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber =  { version = "0.3.20", features = ["json", "env-filter", "tracing-log"] }
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
dotenvy = "0.15.7"
