[package]
name = "fdk-mqa-scoring-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
diesel = { version = "2.3.6", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
http = "1.4.0"
lazy_static = "1.5.0"
mime = "0.3.17"
r2d2 = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber =  { version = "0.3.22", features = ["json", "env-filter", "tracing-log"] }
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
uuid = { version = "1.20.0", features = ["v4"] }

[dev-dependencies]
dotenvy = "0.15.7"
