[package]
name = "fdk-mqa-scoring-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.14.0"
diesel = { version = "2.3.11", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.3.2", features = ["postgres"] }
http = "1.4.2"
lazy_static = "1.5.0"
mime = "0.3.17"
r2d2 = "0.8.10"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
serde_yaml = "0.9.34"
thiserror = "2.0.19"
tracing = "0.1.44"
tracing-subscriber =  { version = "0.3.23", features = ["json", "env-filter", "tracing-log"] }
utoipa = "5.5.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = { version = "1.24.0", features = ["v4"] }

[dev-dependencies]
dotenvy = "0.15.7"
